--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -1,2 +1,4 @@
-<!--pages/player/player.wxml-->
-<text>Here we go !!</text>
+<!-- 全屏毛玻璃效果-->
+<view wx:if="{{picUrl}}" class="player-container" style="background:url({{picUrl}}) center/cover no-peat">
+</view>
+<view class="player-mask"></view>
