--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,5 +1,10 @@
+@import "iconfont.wxss";
+
+
+
+
 /**app.wxss**/
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +21,7 @@ button:focus{
 
 button::after{
   border: none;
-}
+} */
 
 
 page {
