--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -1,4 +1,6 @@
 <!-- 全屏毛玻璃效果-->
-<view wx:if="{{picUrl}}" class="player-container" style="background:url({{picUrl}}) center/cover no-peat">
+<view wx:if="{{picUrl}}" class="player-container" style="background:url({{picUrl}}) center/cover no-repeat">
 </view>
 <view class="player-mask"></view>
+
+<text class="iconfont  icon-bofang"></text>
