音乐播放页布局

--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -3,4 +3,16 @@
 </view>
 <view class="player-mask"></view>
 
-<text class="iconfont  icon-bofang"></text>
+<view class="player-info">
+  <!-- 封面信息 -->
+  <view class="player-disc">
+    <image class="player-img" src="{{picUrl}}"></image>
+  </view>
+
+  <!-- 控制面板 -->
+  <view class="control">
+    <text class="iconfont icon-shangyishoushangyige"></text>
+    <text class="iconfont icon-bofang"></text>
+    <text class="iconfont icon-xiayigexiayishou"></text>
+  </view>
+</view>
