--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -19,10 +19,66 @@
    background-color: #222;
 }
 
-.iconfont{
+.player-info{
+   text-align: center;
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+}
+
+.player-disc {
+   width: 592rpx;
+   height: 592rpx;
+   background: url('https://cloudmusicone.oss-cn-hangzhou.aliyuncs.com/heijiaochangpian.PNG') no-repeat center/contain;
+   position: absolute;
+   left: 50%;
+   transform:translate(-50%,140rpx);
+}
+
+.player-disc::after{
+   content: '';
+   width: 192rpx;
+   height: 274rpx;
+   position: absolute;
+   top: -150rpx;
+   left: 266rpx;
+   background: url('https://cloudmusicone.oss-cn-hangzhou.aliyuncs.com/xiaoweiba0.png') no-repeat center/contain;
+   transform:rotate(-15deg);
+   transform-origin: 24rpx 10rpx;
+}
+
+
+.player-img{
+   width: 368rpx;
+   height: 368rpx;
+   border-radius: 50%;
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   margin-top: -184rpx;
+  margin-left: -184rpx;
+}
+
+.control {
+   position: absolute;
+   bottom: 8%;
+   left: 50%;
+   transform: translateX(-50%);
+   display: flex;
+   align-items: center;
+}
+
+.control .iconfont{
    color: #fefefe;
 }
 
-.icon-bofang{
+.icon-shangyishoushangyige, .icon-xiayigexiayishou{
+   font-size: 80rpx;
+}
+
+.icon-bofang, .icon-zanting{
    font-size: 120rpx;
+   margin: 0 50rpx;
 }
