--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -47,6 +47,11 @@
    background: url('https://cloudmusicone.oss-cn-hangzhou.aliyuncs.com/xiaoweiba0.png') no-repeat center/contain;
    transform:rotate(-15deg);
    transform-origin: 24rpx 10rpx;
+   transition: transform 0.8s ease;
+}
+
+.playing.player-disc::after{
+   transform:rotate(0deg);
 }
 
 
@@ -59,6 +64,22 @@
    top: 50%;
    margin-top: -184rpx;
   margin-left: -184rpx;
+}
+
+.zhuan{
+   animation: disc 12s linear infinite;
+}
+@keyframes disc{
+    form{
+     transform: rotate(0deg);
+    }
+    to{
+       transform: rotate(360deg);
+    }
+}
+
+.ting{
+    animation-play-state: paused;
 }
 
 .control {
