--- a/miniprogram/components/progress-bar/progress-bar.wxml
+++ b/miniprogram/components/progress-bar/progress-bar.wxml
@@ -1,10 +1,10 @@
 <view class="container">
-  <text class="time">00:00</text>
+  <text class="time">{{showTime.currentTime}}</text>
  <view class="control">
    <movable-area class="movable-area">
      <movable-view class="movable-view" direction="horizontal" damping="1000" x="13.3"/>
    </movable-area>
    <progress stroke-width="4" backgroundColor="#969696" activeColor="#fff" percent="30"></progress>
  </view>
-  <text class="time">03:00</text>
+  <text class="time">{{showTime.totalTime}}</text>
 </view>
