拖拽进度条

--- a/miniprogram/components/progress-bar/progress-bar.wxml
+++ b/miniprogram/components/progress-bar/progress-bar.wxml
@@ -2,7 +2,9 @@
   <text class="time">{{showTime.currentTime}}</text>
  <view class="control">
    <movable-area class="movable-area">
-     <movable-view class="movable-view" direction="horizontal" damping="1000" x="{{distance}}"/>
+     <movable-view class="movable-view" direction="horizontal" damping="100" x="{{distance}}" 
+     bindchange="onChange"
+     bindtouchend="onTouchEnd"/>
    </movable-area>
    <progress stroke-width="4" backgroundColor="#969696" activeColor="#fff" percent="{{progress}}"></progress>
  </view>
