--- a/miniprogram/components/lyric/lyric.wxss
+++ b/miniprogram/components/lyric/lyric.wxss
@@ -1,6 +1,23 @@
-.container{
+/*.container{
    position: absolute;
    top: 400rpx;
    left: 200rpx;
    color: #fff;
+} */
+
+.lyric-scroll{
+   margin-top: 190rpx;
+   width: 100%;
+   height: 60%;
+   color: #ccc;
+   font-size: 32rpx;
+}
+
+.lyric-panel{
+   position: relative;
+   top: 50%;
+}
+
+.lyric {
+   min-height: 64rpx;
 }
