--- a/miniprogram/components/lyric/lyric.wxss
+++ b/miniprogram/components/lyric/lyric.wxss
@@ -1,14 +1,7 @@
-/*.container{
-   position: absolute;
-   top: 400rpx;
-   left: 200rpx;
-   color: #fff;
-} */
-
 .lyric-scroll{
-   margin-top: 190rpx;
+   margin-top: 300rpx;
    width: 100%;
-   height: 60%;
+   height: 45%;
    color: #ccc;
    font-size: 32rpx;
 }
@@ -20,4 +13,8 @@
 
 .lyric {
    min-height: 64rpx;
+}
+
+.hightlight-lyric {
+   color: #fff;
 }
