首页导航栏与歌单页装饰

--- a/miniprogram/pages/music/music.wxml
+++ b/miniprogram/pages/music/music.wxml
@@ -12,4 +12,5 @@ interval="3000" duration="1000" class="swiper">
     <yz-playlist playlist="{{item}}"></yz-playlist>
   </block>
 </view>
+<navigation-bar default-data="{{defaultData}}"></navigation-bar>
 
