--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -25,7 +25,7 @@ button::after{
 
 
 page {
-  background: #f6f6f6;
+  background:-webkit-linear-gradient(top,#fdd6ee,#ffc3ca,rgb(228,148,212));
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
