--- a/miniprogram/pages/find/find.wxml
+++ b/miniprogram/pages/find/find.wxml
@@ -1,7 +1,14 @@
-<!--pages/find/find.wxml-->
-<text>Would you wanna find something else?</text>
-<view>
-  <block wx:for="{{cards}}">
-       <my-card></my-card>
-  </block>
+<!-- 自定义导航 -->
+<navigation showIcon='{{false}}' title='发现'></navigation>
+<!-- 顶部搜索区-->
+
+<view class="header">
+  <view class="left" bind:tap="onPublish">
+    <!-- 左侧的发布图标-->
+    <i class="iconfont icon-bianji"></i>
+  </view>
+  <view class="right">
+    <!-- 引入搜索组件，接受子组件回传的search方法 -->
+    <yz-search bind:search="onSearch" />
+  </view>
 </view>
