--- a/miniprogram/pages/find/find.wxml
+++ b/miniprogram/pages/find/find.wxml
@@ -1,7 +1,6 @@
 <!-- 自定义导航 -->
 <navigation showIcon='{{false}}' title='发现'></navigation>
 <!-- 顶部搜索区-->
-
 <view class="header">
   <view class="left" bind:tap="onPublish">
     <!-- 左侧的发布图标-->
@@ -12,3 +11,10 @@
     <yz-search bind:search="onSearch" />
   </view>
 </view>
+
+<scroll-view class="container" scroll-y>
+  <!-- 底部弹出层-->
+  <yz-login modalShow="{{modalShow}}" bind:loginsuccess="onLoginSuccess"
+  bind:loginfail="onLoginFail">
+  </yz-login>
+</scroll-view>
