--- a/miniprogram/components/navigation-bar/navigation-bar.wxss
+++ b/miniprogram/components/navigation-bar/navigation-bar.wxss
@@ -1,13 +1,15 @@
 /* 顶部导航，随着滚动出现*/
 .header{
+  left: 0;
    position: fixed;
    top: 0; 
    width: 100%;  
   z-index: 999;
   padding-bottom: 10rpx;
+  background-color:#333;
   }
 
-  /* 默认的标题菜单*/
+  /* 默认的标题菜单
 .title{ 
   position: absolute;
   left: 50%;
@@ -21,9 +23,9 @@
   -webkit-line-clamp: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-}
+}*/
 
-/* 返回箭头*/
+/* 返回箭头
 .icon-fanhui{
   position: absolute;
   left: 20rpx;
@@ -31,10 +33,10 @@
   font-size: 32px;
   color: #fff;
   z-index: 1003;
-}
+}*/
 
 /* 以下三个元素分三层，实现歌单信息的毛玻璃效果*/
-/* 1-图片背景模糊*/
+/* 1-图片背景模糊
 .blur-bg{
   position: absolute;
   top: 0;
@@ -43,9 +45,9 @@
   height: 100%;
   filter: blur(40rpx);
   opacity: 0.4;
-}
+}*/
 
-/* 2-遮罩层 */
+/* 2-遮罩层 
 .mask{
   position: absolute;
   top: 0;
@@ -53,17 +55,17 @@
   width: 100%;
   height: 100%;
   background-color: #333;
-}
+}*/
 
-/* 3-最上层的内容，一定要相对定位不脱离文档流*/
+/* 3-最上层的内容，一定要相对定位不脱离文档流
 .info-container{
   width: 100%;
   height: 380rpx;
   position: relative;
   background-color: #ccc;
-}
+}*/
 
-/*  歌单详细信息容器，可以用父相子绝+flex来巧布局*/
+/*  歌单详细信息容器，可以用父相子绝+flex来巧布局
 .detail-info{
   position: relative;
   width: 100%;
@@ -72,39 +74,39 @@
   justify-content: center;
   box-sizing: border-box;
   padding-top: 60rpx;
-}
+}*/
 
-/* 左边歌单图片 */
+/* 左边歌单图片 
 .detail-info .left {
  flex: 1 1 30%;
  box-sizing: border-box;
  padding-left: 30rpx;
-}
+}*/
 
-/* 歌单封面图 */
+/* 歌单封面图 
 .detail-img{
    width: 200rpx;
    height: 200rpx;
    border-radius: 10px;
 }
-
-/* 右边歌单信息 */
+*/
+/* 右边歌单信息
 .detail-info .right{
   flex: 1 1 70%;
   box-sizing: border-box;
   padding-left: 30rpx;
-}
+} */
 
-/* 歌单名 */
+/* 歌单名 
 .detail-name {
   color: #FFFFFF;
   font-size: 32rpx;
   line-height: 1.5;
   font-weight: 300;
   margin-bottom: 20rpx;
-}
+}*/
 
-/* 歌单创建者信息：头像、昵称等， flex布局横向 */
+/* 歌单创建者信息：头像、昵称等， flex布局横向 
 .user-info {
   display: flex;
   align-items: center;
@@ -119,16 +121,16 @@
 .user-info text {
   font-size: 26rpx;
   color: #ccc;
-}
+}*/
 
-/* 歌单描述 */
+/* 歌单描述 
 .description {
    font-size: 13px;
    font-weight: 300;
    color: #f6f6f6;
-}
+}*/
 
-/* 分享评论等操作区，父相子绝定位，自身flex布局，主轴均分，侧轴居中 */
+/* 分享评论等操作区，父相子绝定位，自身flex布局，主轴均分，侧轴居中 
 .control {
   position: absolute;
   bottom: -20px;
@@ -141,9 +143,9 @@
   padding-right: 10rpx;
   justify-content: space-around;
   align-items: center;
- }
+ }*/
 
-/* 分三组布局 */
+/* 分三组布局 
 .control view {
   padding-left: 30rpx;
   padding-right: 30rpx;
@@ -152,41 +154,41 @@
   justify-content: space-around;
   color: #333;
   font-size: 28rpx;
-}
+}*/
 
-/* 伪类，对第一个view使用特殊样式 */
+/* 伪类，对第一个view使用特殊样式
 .control view:first-child {
   color: #949494;
-}
+} */
 
-/* 对具有last样式对view使用特殊样式 */
+/* 对具有last样式对view使用特殊样式 
 .control view:not(.last) {
   border-right: 1px solid #ccc;
 }
 
 .control view text .iconfont {
   margin-right: 10rpx;
-}
+}*/
 
-/* 歌单列表滚动容器，注意这里box-sizing的用法 */
+/* 歌单列表滚动容器，注意这里box-sizing的用法 
 .content {
   width: 100%;
   margin-top: 60rpx;
   padding-left: 20rpx;
   padding-right: 20rpx;
   box-sizing: border-box;
-}
+}*/
 
-/* 文本省略为一行显示，复用 */
+/* 文本省略为一行显示，复用 
 .ellipsis {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-}
+}*/
 
-/* 底部 */
+/* 底部 
 .bottom {
   position: fixed;
   bottom: 0;
@@ -195,3 +197,4 @@
   height: 120rpx;
   background-color: #F8F8F8;
 }
+*/
