--- a/miniprogram/pages/publish/publish.wxml
+++ b/miniprogram/pages/publish/publish.wxml
@@ -1,2 +1,24 @@
-<!--miniprogram/pages/publish/publish.wxml-->
-<text>miniprogram/pages/publish/publish.wxml</text>
+<navigation-bar title="发布" colors="{{['#5B4B74','#b4BBb9']}}" direction="top">
+</navigation-bar>
+
+<view class="container">
+ <textarea class="content" placeholder="分享新鲜事..." bindinput="onInput"
+ maxlength="140" auto-focus bindfocus="onFoucs" bindblur="onBlur"></textarea>
+
+ <view class="image-list">
+
+  <!-- +号选择图片的容器-->
+  <view class="image-wrap selectphoto" hidden="{{!selectPhoto}}"
+    bind:tap="onChooseImage">
+    <i class="iconfont icon-add"></i>
+  </view>
+ </view>
+</view>
+
+<view class="footer" style="bottom:{{footerBottom}}rpx">
+  <text class="words-num">{{wordsNum}}</text>
+  <button class="send-btn">发布</button>
+</view>
+
+
+
