--- a/miniprogram/pages/publish/publish.wxml
+++ b/miniprogram/pages/publish/publish.wxml
@@ -6,7 +6,15 @@
  maxlength="140" auto-focus bindfocus="onFoucs" bindblur="onBlur"></textarea>
 
  <view class="image-list">
-
+ <!-- 显示图片， 可以预览和删除-->
+  <block wx:for="{{images}}" wx:key="*this">
+    <view class="image-wrap">
+      <image class="image" src="{{item}}" mode="aspectFill" bind:tap="onPreviewImage" data-imgsrc="{{item}}">      
+      </image>
+      <i class="iconfont icon-shanchu" bind:tap="onDelImage" data-index="{{index}}"></i>
+    </view>
+  </block>
+  
   <!-- +号选择图片的容器-->
   <view class="image-wrap selectphoto" hidden="{{!selectPhoto}}"
     bind:tap="onChooseImage">
