--- a/miniprogram/pages/publish/publish.wxml
+++ b/miniprogram/pages/publish/publish.wxml
@@ -23,7 +23,7 @@
  </view>
 </view>
 
-<view class="footer" style="bottom:{{footerBottom}}rpx">
+<view class="footer" style="bottom:{{footerBottom}}px">
   <text class="words-num">{{wordsNum}}</text>
   <button class="send-btn" bind:tap="send">发布</button>
 </view>
