博客评论功能

--- a/miniprogram/global.scss
+++ b/miniprogram/global.scss
@@ -7,7 +7,7 @@ $secondarySize: 24rpx; //次要文字大小
 $gap: 20rpx; //边距
 $imgLg: 230rpx; //大图
 $imgSm: 64rpx; //头像小图
-$lighterBgColor: #fff;
+$lightBgColor: #fff;
 $lightFontColor: #000;
 $darkFontColor: #fff;
 page {
