--- a/miniprogram/components/bottom-modal/bottom-modal.wxss
+++ b/miniprogram/components/bottom-modal/bottom-modal.wxss
@@ -1,1 +1,33 @@
-/* components/bottom-modal/buttom-modal.wxss */
+@charset "UTF-8";
+page {
+  background-color: #ededed;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal .panel {
+  position: absolute;
+  bottom: 0rpx;
+  left: 0;
+  width: 100%;
+  min-height: 300rpx;
+  box-sizing: border-box;
+  background-color: #f8f8f8;
+  /* 为了增加点击区域大小*/
+}
+
+.modal .panel .icon-quxiao {
+  position: absolute;
+  right: 10rpx;
+  top: 10rpx;
+  padding: 20rpx;
+}
